--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.2",
     "monaco-editor": "^0.24.0",
     "monaco-editor-core": "^0.31.1",
+    "ngx-cookie-service": "^13.1.2",
     "ngx-monaco-editor": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
