--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.1.2",
     "@angular/platform-browser-dynamic": "~13.1.2",
     "@angular/router": "~13.1.2",
+    "diff-match-patch-typescript": "^1.0.8",
     "monaco-editor": "^0.24.0",
     "monaco-editor-core": "^0.31.1",
     "ngx-cookie-service": "^13.1.2",
