--- a/ui/package.json
+++ b/ui/package.json
@@ -16,9 +16,12 @@
     "@angular/compiler": "~12.2.16",
     "@angular/core": "~12.2.16",
     "@angular/forms": "~12.2.16",
+    "@angular/localize": "~12.2.16",
     "@angular/platform-browser": "~12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "~12.2.16",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.0",
     "diff-match-patch-typescript": "^1.0.8",
     "monaco-editor": "^0.24.0",
     "monaco-editor-core": "^0.31.1",
