--- a/ui/angular.json
+++ b/ui/angular.json
@@ -32,6 +32,8 @@
               { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor" }
             ],
             "styles": [
+              "./node_modules/@forevolve/bootstrap-dark/dist/css/toggle-bootstrap.min.css",
+              "./node_modules/@forevolve/bootstrap-dark/dist/css/toggle-bootstrap-dark.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -100,6 +102,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@forevolve/bootstrap-dark/dist/css/toggle-bootstrap.min.css",
+              "./node_modules/@forevolve/bootstrap-dark/dist/css/toggle-bootstrap-dark.min.css",
               "src/styles.scss"
             ],
             "scripts": []
