--- a/ui/package.json
+++ b/ui/package.json
@@ -25,9 +25,11 @@
     "@nth-cloud/ng-toggle": "^8.0.2",
     "bootstrap": "^4.5.0",
     "diff-match-patch-typescript": "^1.0.8",
+    "file-saver": "^2.0.5",
     "monaco-editor": "^0.24.0",
     "monaco-editor-core": "^0.31.1",
     "ngx-cookie-service": "^12.0.3",
+    "ngx-filesaver": "^13.0.0",
     "ngx-monaco-editor": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
