--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "file-saver": "^2.0.5",
     "monaco-editor": "^0.24.0",
     "monaco-editor-core": "^0.31.1",
+    "ngx-clipboard": "^15.0.1",
     "ngx-cookie-service": "^12.0.3",
     "ngx-filesaver": "^13.0.0",
     "ngx-monaco-editor": "^12.0.0",
