--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@forevolve/bootstrap-dark": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nth-cloud/ng-toggle": "^8.0.2",
+    "aws-amplify": "^4.3.14",
     "bootstrap": "^4.5.0",
     "diff-match-patch-typescript": "^1.0.8",
     "file-saver": "^2.0.5",
