updating amplify configuration

--- a/ui/amplify/backend/backend-config.json
+++ b/ui/amplify/backend/backend-config.json
@@ -1,11 +1,4 @@
 {
-  "hosting": {
-    "amplifyhosting": {
-      "service": "amplifyhosting",
-      "providerPlugin": "awscloudformation",
-      "type": "manual"
-    }
-  },
   "auth": {
     "cocoder": {
       "service": "Cognito",
@@ -28,6 +21,13 @@
     "cocoder": {
       "service": "Pinpoint",
       "providerPlugin": "awscloudformation"
+    }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2022-02-24T09:29:57.960Z"
     }
   }
 }
