--- a/ui/amplify/.config/project-config.json
+++ b/ui/amplify/.config/project-config.json
@@ -1,12 +1,12 @@
 {
-  "projectName": "cocoder",
+  "projectName": "coCoder",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
     "framework": "angular",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": "dist/ui",
+      "DistributionDir": "dist/amplify-app",
       "BuildCommand": "npm run-script build",
       "StartCommand": "ng serve"
     }
