--- a/ui/package.json
+++ b/ui/package.json
@@ -41,6 +41,7 @@
     "@angular-devkit/build-angular": "^13.2.5",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.4",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
