--- a/ui/angular.json
+++ b/ui/angular.json
@@ -32,7 +32,11 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "assets/monaco-editor" }
+              {
+                "glob": "**/*",
+                "input": "node_modules/monaco-editor",
+                "output": "assets/monaco-editor"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -103,8 +107,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@forevolve/bootstrap-dark/dist/css/toggle-bootstrap.min.css",
-              "./node_modules/@forevolve/bootstrap-dark/dist/css/toggle-bootstrap-dark.min.css",
               "src/styles.scss"
             ],
             "scripts": []
