--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -20,6 +20,10 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "types": [
+      "jest",
+      "node"
     ]
   },
   "angularCompilerOptions": {
