--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
+    "@types/wicg-file-system-access": "^2020.9.5",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
