--- a/ui/package.json
+++ b/ui/package.json
@@ -45,6 +45,7 @@
     "@angular/compiler-cli": "~13.2.4",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
+    "@types/jest": "^28.1.1",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
     "@types/wicg-file-system-access": "^2020.9.5",
