experimental support of Python LSP

--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.2.4",
     "@angular/platform-browser-dynamic": "~13.2.4",
     "@angular/router": "~13.2.4",
+    "@codingame/monaco-jsonrpc": "^0.4.0",
     "@forevolve/bootstrap-dark": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@types/popper.js": "^1.11.0",
@@ -28,11 +29,14 @@
     "bootstrap-icons": "^1.8.1",
     "diff-match-patch-typescript": "^1.0.8",
     "file-saver": "^2.0.5",
-    "monaco-editor": "^0.32.1",
+    "monaco-editor": "0.33.0",
+    "monaco-editor-workers": "0.33.0",
+    "monaco-languageclient": "^1.0.1",
     "ngx-clipboard": "^15.0.1",
     "ngx-cookie-service": "^13.1.2",
     "ngx-filesaver": "^13.0.0",
     "node-sass-tilde-importer": "^1.0.2",
+    "normalize-url": "^7.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
@@ -40,6 +44,7 @@
   },
   "devDependencies": {
     "@alasdair/karma-scss-preprocessor": "^5.0.0-3",
+    "@angular-builders/custom-webpack": "^13.1.0",
     "@angular-devkit/build-angular": "^13.2.5",
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.4",
@@ -48,6 +53,7 @@
     "@types/jest": "^28.1.1",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.4",
+    "@types/vscode": "1.67.0",
     "@types/wicg-file-system-access": "^2020.9.5",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
