installing pyls as a separate pip command

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,5 +1,8 @@
 packages:
   yum:
     python3-devel: []
-  python:
-    python-language-server: []
+    python3-pip: []
+
+commands:
+  install_pyls:
+    command: pip install -y python-language-server
