specifying packages in .ebextensions

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,4 +1,17 @@
 packages:
   yum:
     python3-devel: []
+    python3: []
     python3-pip: []
+  python:
+    python-language-server: []
+    autopep8: []
+    pycodestyle: []
+    pydocstyle: []
+    pyflakes: []
+    pylint: []
+    python-jsonrpc-server: []
+    python-language-server: []
+    rope: []
+    typing_extensions: []
+    wrapt: []
