--- a/ui/package.json
+++ b/ui/package.json
@@ -24,7 +24,6 @@
     "@forevolve/bootstrap-dark": "^2.1.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "@types/popper.js": "^1.11.0",
-    "aws-amplify": "^4.3.14",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.8.1",
     "diff-match-patch-typescript": "^1.0.8",
@@ -37,6 +36,7 @@
     "ngx-filesaver": "^13.0.0",
     "node-sass-tilde-importer": "^1.0.2",
     "normalize-url": "^7.0.3",
+    "path-browserify": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
