--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -3,15 +3,6 @@ packages:
     python3-devel: []
     python3: []
     python3-pip: []
-  python:
-    python-language-server: []
-    autopep8: []
-    pycodestyle: []
-    pydocstyle: []
-    pyflakes: []
-    pylint: []
-    python-jsonrpc-server: []
-    python-language-server: []
-    rope: []
-    typing_extensions: []
-    wrapt: []
+commands:
+  install_python_dependencies:
+    command: pip3 install -y autopep8 pycodestyle pydocstyle pyflakes pylint python-jsonrpc-server python-language-server rope typing_extensions wrapt
