--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,5 +1,8 @@
-commands:
-  01_install_python:
-    command: yum install -y python3 python3-pip python3-devel
-  02_install_python_packages:
+packages:
+  yum:
+    python3-devel: []
+    python3: []
+    python3-pip: []
+container_commands:
+  install_python_dependencies:
     command: pip3 install -y autopep8 pycodestyle pydocstyle pyflakes pylint python-jsonrpc-server python-language-server rope typing_extensions wrapt
