specifying Python dependencies in the requirements.txt

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -5,4 +5,4 @@ packages:
     python3-pip: []
 container_commands:
   install_python_dependencies:
-    command: pip3 install -y autopep8 pycodestyle pydocstyle pyflakes pylint python-jsonrpc-server python-language-server rope typing_extensions wrapt
+    command: pip3 install -r requirements.txt
