installing in commands instead of container_commands

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -3,6 +3,6 @@ packages:
     python3-devel: []
     python3: []
     python3-pip: []
-container_commands:
+commands:
   install_python_dependencies:
     command: pip3 install -r requirements.txt
