downloading requirements.txt

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -3,6 +3,13 @@ packages:
     python3-devel: []
     python3: []
     python3-pip: []
+
+files:
+  "/home/ec2-user/requirements.txt" :
+    mode: "000755"
+    owner: root
+    group: root
+    source: https://raw.githubusercontent.com/pasiasty/cocoder/master/requirements.txt
 commands:
   install_python_dependencies:
     command: pip3 install -r requirements.txt
