--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -14,3 +14,4 @@ commands:
   install_python_dependencies:
     command: pip3 install -r requirements.txt
     cwd: /home/ec2-user
+    test: pyls -h
