finding absolute path for pyls

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -14,4 +14,8 @@ commands:
   install_python_dependencies:
     command: pip3 install -r requirements.txt
     cwd: /home/ec2-user
-    test: pyls -h
+    test: where pyls
+container_commands:
+  install_python_dependencies:
+    command: pip3 install -r requirements.txt
+    test: where pyls
