--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -14,8 +14,8 @@ commands:
   install_python_dependencies:
     command: pip3 install -r requirements.txt
     cwd: /home/ec2-user
-    test: where pyls
+    test: whereis pyls
 container_commands:
   install_python_dependencies:
     command: pip3 install -r requirements.txt
-    test: where pyls
+    test: whereis pyls
