fixing env setup

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -4,13 +4,12 @@ packages:
     python3: []
     python3-pip: []
 files:
-  "/home/ec2-user/requirements.txt" :
+  "/etc/requirements.txt" :
     mode: "000755"
     owner: root
     group: root
     source: https://raw.githubusercontent.com/pasiasty/cocoder/master/requirements.txt
 commands:
   install_python_dependencies:
-    command: pip3 install -r requirements.txt
-    cwd: /home/ec2-user
+    command: pip3 install -r /etc/requirements.txt
     test: pyls -h
