--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -3,6 +3,7 @@ packages:
     python3-devel: []
     python3: []
     python3-pip: []
+    docker: []
 files:
   "/etc/requirements.txt" :
     mode: "000755"
@@ -12,3 +13,5 @@ files:
 commands:
   install_python_dependencies:
     command: pip3 install -r /etc/requirements.txt
+  configure_sudio:
+    command echo "webapp    ALL=(ALL:ALL) ALL" >> /etc/sudoers
