--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -14,4 +14,4 @@ commands:
   install_python_dependencies:
     command: pip3 install -r /etc/requirements.txt
   configure_sudio:
-    command echo "webapp    ALL=(ALL:ALL) ALL" >> /etc/sudoers
+    command: echo "webapp    ALL=(ALL:ALL) ALL" >> /etc/sudoers
