initializing python docker image

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -15,3 +15,5 @@ commands:
     command: pip3 install -r /etc/requirements.txt
   configure_sudio:
     command: echo "webapp    ALL=(ALL:ALL) ALL" >> /etc/sudoers
+  pull_python_image:
+    command: docker pull python:latest
