starting docker service

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -17,3 +17,5 @@ commands:
     command: echo "webapp    ALL=(ALL:ALL) ALL" >> /etc/sudoers
   pull_python_image:
     command: docker pull python:latest
+  start_docker_service:
+    command: systemctl start docker
