fixing init order

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -11,11 +11,12 @@ files:
     group: root
     source: https://raw.githubusercontent.com/pasiasty/cocoder/master/requirements.txt
 commands:
-  install_python_dependencies:
+  01_install_python_dependencies:
     command: pip3 install -r /etc/requirements.txt
-  configure_sudio:
+  02_configure_sudo:
     command: echo "webapp    ALL=(ALL:ALL) ALL" >> /etc/sudoers
-  pull_python_image:
-    command: docker pull python:latest
-  start_docker_service:
+  03_start_docker_service:
     command: systemctl start docker
+  04_pull_python_image:
+    command: docker pull python:latest
+  
