--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -19,4 +19,7 @@ commands:
     command: systemctl start docker
   04_pull_python_image:
     command: docker pull python:latest
-  
+  05_add_docker_group:
+    command: groupadd docker
+  06_allow_webapp_user_for_running_docker:
+    command: usermod -aG docker webapp
