correct set up of the user

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,4 +1,10 @@
 packages:
+  groups:
+    docker: {}
+  users:
+    webapp:
+      groups:
+        - docker
   yum:
     python3-devel: []
     python3: []
@@ -19,7 +25,3 @@ commands:
     command: systemctl start docker
   04_pull_python_image:
     command: docker pull python:latest
-  05_add_docker_group:
-    command: groupadd docker
-  06_allow_webapp_user_for_running_docker:
-    command: usermod -aG docker webapp
