--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,10 +1,4 @@
 packages:
-  groups:
-    docker: {}
-  users:
-    webapp:
-      groups:
-        - docker
   yum:
     python3-devel: []
     python3: []
@@ -25,3 +19,6 @@ commands:
     command: systemctl start docker
   04_pull_python_image:
     command: docker pull python:latest
+container_commands:
+  01_allow_running_docker_without_sudo:
+    command: usermod -a -G docker webapp
