--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -4,6 +4,7 @@ packages:
     python3: []
     python3-pip: []
     docker: []
+    clangd: []
 files:
   "/etc/requirements.txt" :
     mode: "000755"
