--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -4,7 +4,7 @@ packages:
     python3: []
     python3-pip: []
     docker: []
-    clangd: []
+    clang-tools: []
 files:
   "/etc/requirements.txt" :
     mode: "000755"
