enable epel repo

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -20,6 +20,8 @@ commands:
     command: docker pull python:latest
 #  04_install_clangd_from_snap:
 #    command: snap install clangd --classic
+  04_enable_epel_repo:
+     command: yum-config-manager --enable epel
   05_list_repos:
      command: yum repolist
   06_list_packages:
