Revert "installing llvm"
This reverts commit 00d33ba396db575e9dba43f90ace8a77a786a731.

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -4,7 +4,7 @@ packages:
     python3: []
     python3-pip: []
     docker: []
-    llvm: []
+#    snapd: []
 files:
   "/etc/requirements.txt" :
     mode: "000755"
@@ -18,6 +18,14 @@ commands:
     command: systemctl start docker
   03_pull_python_image:
     command: docker pull python:latest
+#  04_install_clangd_from_snap:
+#    command: snap install clangd --classic
+  04_enable_epel_repo:
+     command: yum-config-manager --enable epel
+  05_list_repos:
+     command: yum repolist
+  06_list_packages:
+     command: yum list
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
