--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -4,7 +4,7 @@ packages:
     python3: []
     python3-pip: []
     docker: []
-    snapd: []
+    clang-tools: []
 files:
   "/etc/requirements.txt" :
     mode: "000755"
@@ -18,8 +18,6 @@ commands:
     command: systemctl start docker
   03_pull_python_image:
     command: docker pull python:latest
-  04_install_clangd_from_snap:
-    command: snap install clangd --classic
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
