--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -21,3 +21,7 @@ commands:
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
+  02_install_gopls:
+    command: go install golang.org/x/tools/gopls
+  03_build_gopls:
+    command: go build golang.org/x/tools/gopls
