looking for clang

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -18,6 +18,8 @@ commands:
     command: systemctl start docker
   03_pull_python_image:
     command: docker pull python:latest
+  04_finding_clang:
+    command: find / | grep clang
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
