--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -4,7 +4,6 @@ packages:
     python3: []
     python3-pip: []
     docker: []
-    llvm: []
 files:
   "/etc/requirements.txt" :
     mode: "000755"
@@ -18,8 +17,12 @@ commands:
     command: systemctl start docker
   03_pull_python_image:
     command: docker pull python:latest
-  04_finding_clang:
-    command: find / | grep clang
+  04_installing_epel:
+    command: amazon-linux-extras install epel -y
+  05_enabling_epel:
+    command: yum-config-manager --enable epel
+  06_listing_repos:
+    command: yum repolist
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
