--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -21,8 +21,10 @@ commands:
     command: amazon-linux-extras install epel -y
   05_enabling_epel:
     command: yum-config-manager --enable epel
-  06_listing_repos:
-    command: yum repolist
+  06_install_snapd:
+    command: yum install snapd
+  07_install_clangd:
+    command: yum install clangd
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
