--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -5,6 +5,7 @@ packages:
     python3-pip: []
     docker: []
     clang: []
+    llvm: []
 files:
   "/etc/requirements.txt" :
     mode: "000755"
@@ -18,14 +19,6 @@ commands:
     command: systemctl start docker
   03_pull_python_image:
     command: docker pull python:latest
-  04_installing_epel:
-    command: amazon-linux-extras install epel -y
-  05_enabling_epel:
-    command: yum-config-manager --enable epel
-  06_install_snapd:
-    command: yum install snapd
-  07_install_clangd:
-    command: yum install clangd
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
