putting clangd into the Docker container

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -17,8 +17,8 @@ commands:
     command: pip3 install -r /etc/requirements.txt
   02_start_docker_service:
     command: systemctl start docker
-  03_pull_python_image:
-    command: docker pull python:latest
+  03_pull_executor_image:
+    command: docker pull mpasek/cocoder-executor:latest
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
