--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -19,6 +19,8 @@ commands:
     command: systemctl start docker
   03_pull_executor_image:
     command: docker pull mpasek/cocoder-executor:latest
+  04_install_gopls:
+    command: go install golang.org/x/tools/gopls
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
