--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -19,8 +19,10 @@ commands:
     command: systemctl start docker
   03_pull_executor_image:
     command: docker pull mpasek/cocoder-executor:latest
-  04_install_gopls:
-    command: go install golang.org/x/tools/gopls@latest
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
+  02_install_gopls:
+    command: go install golang.org/x/tools/gopls
+  03_build_gopls:
+    command: go build golang.org/x/tools/gopls
