--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 autopep8==1.6.0
+nodeenv==1.6.0
 numpy==1.21.6
 pycodestyle==2.8.0
 pydocstyle==6.1.1
 pyflakes==2.4.0
 pylint==2.14.1
+pyright==1.1.254
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
 rope==1.1.1
