installing black on AWS

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -1,11 +1,16 @@
 packages:
   yum:
+    python3-devel: []
+    python3: []
+    python3-pip: []
     docker: []
 commands:
   01_start_docker_service:
     command: systemctl start docker
   02_pull_executor_image:
     command: docker pull mpasek/cocoder-executor:latest
+  03_install_python_dependencies:
+    command: pip3 install black
 container_commands:
   01_allow_running_docker_without_sudo:
     command: usermod -a -G docker webapp
