--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,32 @@
+astroid==2.11.6
 autopep8==1.6.0
 black==22.3.0
+click==8.1.3
+dill==0.3.5.1
+isort==5.10.1
+jedi==0.17.2
+lazy-object-proxy==1.7.1
+mccabe==0.7.0
+mypy-extensions==0.4.3
 nodeenv==1.6.0
-numpy==1.21.6
+numpy==1.22.4
+parso==0.7.1
+pathspec==0.9.0
+platformdirs==2.5.2
+pluggy==1.0.0
 pycodestyle==2.8.0
 pydocstyle==6.1.1
 pyflakes==2.4.0
-pylint==2.14.1
-pyright==1.1.254
+pylint==2.14.3
+pyright==1.1.255
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
 rope==1.1.1
+snowballstemmer==2.2.0
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.0
 typing_extensions==4.2.0
+ujson==5.3.0
 wrapt==1.14.1
 yapf==0.32.0
