cleanning up unused images

--- a/.ebextensions/packages.config
+++ b/.ebextensions/packages.config
@@ -7,9 +7,11 @@ packages:
 commands:
   01_start_docker_service:
     command: systemctl start docker
-  02_pull_executor_image:
+  02_prune_old_images:
+    command: docker image prune -a -f
+  03_pull_executor_image:
     command: docker pull mpasek/cocoder-executor:latest
-  03_install_python_dependencies:
+  04_install_python_dependencies:
     command: pip3 install black
 container_commands:
   01_allow_running_docker_without_sudo:
